# sprouter

./: Cargo.toml  Dockerfile  README.adoc  rigel.yaml
.github/workflows/: build.yml
charts/sprouter/: Chart.yaml  README.md  values.yaml
charts/sprouter/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  serviceaccount.yaml
src/: grower.rs  lib.rs  main.rs  propagate.rs  shadower.rs  types.rs  utils.rs
src/controller/: configmap.rs  mod.rs  namespace.rs  secret.rs
src/kubernetes/: manager.rs  mod.rs
src/shadow/: kind.rs  manager.rs  mod.rs
src/sprout/: kind.rs  manager.rs  mod.rs
tests/: propagate_tests.rsold
