[package]
name = "shadower"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A Kubernetes operator that shadows annotated ConfigMaps and Secrets to all namespaces."
license = "MIT"

[lib]
name = "shadower"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
kube = { version = "0.99.0", features = ["runtime", "derive"] }
kube-runtime = "0.99.0"
k8s-openapi = { version = "0.24.0", features = ["v1_28"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]
rstest = "0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.99.0", features = ["runtime"] }
k8s-openapi = { version = "0.24", features = ["v1_28"] }
serde_json = "1.0"
