[package]
name = "sprouter"
version = "0.1.0"
edition = "2021"
authors = ["Jeroen van Erp <jeroen@geeko.me>"]
description = "A Kubernetes operator that copies annotated ConfigMaps and Secrets to all namespaces."
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
kube = { version = "0.99.0", features = ["runtime", "derive"] }
kube-runtime = "0.99.0"
k8s-openapi = { version = "0.24.0", features = ["v1_28"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
async-trait = "0.1"
sha2 = "0.10.8"

[dev-dependencies]
rstest = "0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.99.0", features = ["runtime"] }
k8s-openapi = { version = "0.24", features = ["v1_28"] }
serde_json = "1.0"
mockall = "0.10"
